Rough draft of noproxy support

--- a/bitlbee.conf
+++ b/bitlbee.conf
@@ -144,6 +144,10 @@
 # Proxy = http://john:doe@proxy.localnet.com:8080
 # Proxy = socks4://socksproxy.localnet.com
 # Proxy = socks5://socksproxy.localnet.com
+## A colon-separated list of domain suffixes for which the proxy
+## should NOT be used.
+# NoProxy = .domain.com:test.mysite.net
+
 
 ## Protocols offered by bitlbee
 ## 
